WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
29136
[Qt] emit microFocusChanged() signal when no QWidget-based view is present.
https://bugs.webkit.org/show_bug.cgi?id=29136
Summary
[Qt] emit microFocusChanged() signal when no QWidget-based view is present.
Yongjun Zhang
Reported
2009-09-10 11:59:56 PDT
Currently, EditorClientQt::setInputMethodState emits microFocusChanged only when view is present. For viewless client like wrt canvas, it also need to get this signal that some special actions can be triggered (like VKB in s60 5.0).
Attachments
emit microFocusChanged() regardless of view.
(1.25 KB, patch)
2009-09-10 12:04 PDT
,
Yongjun Zhang
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Yongjun Zhang
Comment 1
2009-09-10 12:04:43 PDT
Created
attachment 39363
[details]
emit microFocusChanged() regardless of view.
Simon Hausmann
Comment 2
2009-09-11 00:09:49 PDT
Comment on
attachment 39363
[details]
emit microFocusChanged() regardless of view. r=me, thanks This is a correct change, but I think it will need more work to fully function. This ties into the discussion about making QWebPage work better in environments without a view but a graphics item instead. Just emitting the signal helps, but it's not sufficient to determine then if the input method should be enabled or not. Please see also the discussion in #28862 and the follow-up in #29085. We could benefit from your experience in using it without a view :)
WebKit Commit Bot
Comment 3
2009-09-11 01:55:57 PDT
Comment on
attachment 39363
[details]
emit microFocusChanged() regardless of view. Clearing flags on attachment: 39363 Committed
r48291
: <
http://trac.webkit.org/changeset/48291
>
WebKit Commit Bot
Comment 4
2009-09-11 01:56:03 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug