2009-09-11  Yongjun Zhang  <yongjun.zhang@nokia.com>

Reviewed by Simon Hausmann.

        https://bugs.webkit.org/show_bug.cgi?id=29136
        [Qt] emit microFocusChanged() signal when no QWidget-based view is present.

        emit microFocusChange() signal regardless of view.

        * WebCoreSupport/EditorClientQt.cpp:
        (WebCore::EditorClientQt::setInputMethodState):

Canonical link: https://commits.webkit.org/39860@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@48291 268f45cc-cd09-0410-ab3c-d52691b4dbfc